<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".detail.DetailFragment">

    <ImageView
        android:id="@+id/ivBackMoviePoster"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/bg_radius_8dp_bottom_only"
        android:contentDescription="@string/movie_landscape_poster"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/dummy_movie_back" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_radius_8dp_gradient"
        app:layout_constraintBottom_toBottomOf="@id/ivBackMoviePoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBackMoviePoster" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintBottom_toBottomOf="@id/tvMovieTitle"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/dummy_movie_poster" />

    <TextView
        android:id="@+id/tvMovieTitle"
        style="@style/SemiBold18Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivMoviePoster"
        app:layout_constraintTop_toBottomOf="@id/ivBackMoviePoster"
        tools:text="Dr. Strange: Movie of Madness" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_movie" />

            <TextView
                style="@style/Medium12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overviews" />

            <TextView
                android:id="@+id/tvMovieOverviews"
                style="@style/Regular12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences." />

            <TextView
                style="@style/Medium12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/release_date" />

            <TextView
                android:id="@+id/tvMovieReleaseDate"
                style="@style/Regular12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="2019-08-03" />

            <TextView
                style="@style/Medium12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/popularity" />

            <TextView
                android:id="@+id/tvMoviePopularity"
                style="@style/Regular12Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="48.261451" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ivFavoriteMovie"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/bg_radius_8dp"
        android:backgroundTint="?colorOnPrimary"
        android:contentDescription="@string/bookmark_icon"
        android:foregroundGravity="center"
        android:src="@drawable/ic_bookmarked"
        app:tint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>