<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refreshLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:paddingHorizontal="30dp"
        android:clipToPadding="false"
        android:paddingTop="42dp"
        tools:context="space.iqbalsyafiq.favorite.FavoriteFragment">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/SemiBold36Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvList"
            style="@style/Medium18Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/find_your_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/Regular14Sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="?colorSecondary"
            android:hint="@string/search_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvList" />

        <TextView
            android:id="@+id/tvErrorApi"
            style="@style/Medium14Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/there_s_an_error_when_fetching_the_api"
            android:textColor="@color/red_accent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListMovie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="-6dp"
            android:orientation="vertical"
            android:layout_marginEnd="6dp"
            android:clipToPadding="false"
            android:paddingBottom="114dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearch"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_movie" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavoriteList"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="?colorOnPrimary"
            android:contentDescription="@string/bookmark_icon"
            android:foregroundGravity="center"
            android:src="@drawable/ic_bookmarked"
            app:tint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
