<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:paddingHorizontal="30dp"
        android:paddingTop="42dp"
        tools:context=".favorite.FavoriteFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvList"
            app:layout_constraintTop_toTopOf="@id/tvList"
            app:tint="@color/dark_accent" />

        <TextView
            android:id="@+id/tvList"
            style="@style/SemiBold24Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/your_favorite_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/Regular14Sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius_8dp"
            android:hint="@string/search_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvList" />

        <TextView
            android:id="@+id/tvErrorApi"
            style="@style/Medium14Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/there_s_an_error_when_fetching_the_api"
            android:textColor="@color/red_accent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearch"
            tools:listitem="@layout/item_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
